--- a/Tyuiu.MohnonogovaPV.Sprint7.Project.V13/Tyuiu.MohnonogovaPV.Sprint7.Project.V13.csproj
+++ b/Tyuiu.MohnonogovaPV.Sprint7.Project.V13/Tyuiu.MohnonogovaPV.Sprint7.Project.V13.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MohnonogovaPV.Project.V13.Lib\Tyuiu.MohnonogovaPV.Project.V13.Lib.csproj" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.MohnonogovaPV.Sprint7.Project.V13.Lib\Tyuiu.MohnonogovaPV.Sprint7.Project.V13.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
